XP-2057 Detail panel - Implement rendering of selected custom widget * Fixed error message not showing when switching between widgets

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/view/detail/widget-view.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/view/detail/widget-view.less
@@ -15,14 +15,14 @@
     }
 
     .widget-item-view {
-      height: auto;
       background-color: @admin-bg-almost-white;
       box-shadow: none;
-
+      width: calc(~'100% - 12px');
+/*
       .no-error {
         width: calc(~'100% - 12px');
       }
-
+*/
       .error {
         .watermark-text();
       }
